--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ body {
 }
 .footer a {
   text-decoration: none;
-  color: red;
+  color: #fff;
+  font-size: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
