--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ body{
     box-sizing: border-box;
     a{
         text-decoration: none;
-        color: red;
+        color: #fff;
+        font-size: 30px;
     }
 }
