--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 $primary: #a331dd;
-$secondary: #2e0d3f;
+$secondary: #3e1253;
 $clear: rgb(247, 247, 247);
 
 body{
@@ -36,6 +36,21 @@ body{
         color: $primary !important;
     }
 
+}
+
+.headline{
+    h1{
+        font-weight: 600;
+        font-size: 25px;
+    }
+}
+
+.apresentacao{
+    width: 98%;
+    margin-bottom: 20px;
+    img{
+        width:100%;
+    }
 }
 
 .footer{
