--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,8 @@ body{
     margin-bottom: 20px;
     img{
         width:100%;
+        border-radius: 15px;
+        box-shadow: 0 0 10px #383838;
     }
 }
 
