--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,18 @@ body {
   box-shadow: 0 0 10px #383838;
 }
 
+.titulo {
+  text-align: center;
+}
+.titulo-letra {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.video {
+  margin: 30px 0;
+}
+
 .footer {
   background: #a331dd;
   color: #fff;
