--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 999;
 
     & .navbar-brand {
         img {
@@ -59,14 +60,31 @@ body {
 
 .titulo {
     text-align: center;
-    &-letra{
+
+    &-letra {
         font-weight: 600;
-        font-size:25px;
+        font-size: 25px;
     }
 }
 
-.video{
-    margin:30px 0;
+.video {
+    margin: 30px 0;
+}
+
+.btn-roxo {
+    background-color: #a331dd !important;
+    border-color: #a331dd !important;
+    color: #FFFFFF !important;
+
+    &:hover {
+        background-color: #8a29bc !important;
+        border-color: #8a29bc !important;
+        color: #FFFFFF !important;
+    }
+}
+
+#carouselProvaSocial {
+    margin-bottom: 3rem;
 }
 
 .footer {
