--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ body {
 
     & .nav-link {
         color: $primary !important;
+        text-align: center;
     }
 
 }
@@ -85,6 +86,55 @@ body {
 
 #carouselProvaSocial {
     margin-bottom: 3rem;
+    border-radius:15px ;
+    img {
+        width: 100%;
+        border-radius: 15px;
+        box-shadow: 0 0 20px #383838;
+    }
+}
+
+
+@keyframes pulo-suave {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+.btn-whatsapp-flutuante {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background-color: #25d366;
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    text-decoration: none;
+    animation: pulo-suave 2s ease-in-out infinite;
+
+    &:hover {
+        background-color: #128c7e;
+        color: #fff;
+        transform: scale(1.1);
+        animation: none;
+        transform: scale(1.1);
+        background-color: #128c7e;
+        color: #fff;
+    }
 }
 
 .footer {
@@ -98,5 +148,13 @@ body {
         text-decoration: none;
         color: #fff;
         font-size: 30px;
+    }
+}
+
+@media (min-width: 480px) {
+    .navbar-nav {
+        float: right;
+        padding: 20px !important;
+        font-size: 15px !important;
     }
 }
