--- a/css/style.css
+++ b/css/style.css
@@ -127,11 +127,60 @@ body {
   font-size: 30px;
 }
 
-@media (min-width: 480px) {
-  .navbar-nav {
-    float: right;
-    padding: 20px !important;
-    font-size: 15px !important;
+@media (min-width: 768px) {
+  body {
+    margin-top: 190px !important;
+  }
+
+  .headline h1 {
+    font-size: 40px;
+    max-width: 800px;
+    margin: 0 auto 40px auto;
+    line-height: 1.3;
+  }
+
+  .titulo-letra {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+
+  .apresentacao {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto 40px auto;
+  }
+
+  #carouselProvaSocial {
+    max-width: 600px;
+    margin: 0 auto 5rem auto;
+  }
+
+  .video {
+    max-width: 800px;
+    margin: 40px auto;
+    text-align: center;
+  }
+  .video video {
+    width: 100%;
+    height: auto !important;
+    border-radius: 15px;
+    box-shadow: 0 0 20px #383838;
+  }
+
+  .navbar {
+    padding: 1rem 2rem;
+  }
+  .navbar .navbar-brand img {
+    width: 150px;
+  }
+  .navbar .nav-link {
+    font-size: 18px;
+    margin-left: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .headline h1 {
+    font-size: 56px;
   }
 }
 
